// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EarnCard snapshot > compact card matches snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-1hf7rvl"
  >
    <div
      class="MuiStack-root css-10yhf5k-MuiStack-root"
    >
      <div
        class="MuiStack-root css-101nimo-MuiStack-root"
      >
        <div
          class="badge-container MuiBox-root css-3aw23n"
        >
          <svg
            fill="none"
            height="12"
            viewBox="0 0 20 20"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.3164 1.82532C14.9356 1.61746 15.6081 1.62565 16.2227 1.8468C16.8368 2.06813 17.3586 2.49049 17.7031 3.04504C18.0418 3.5906 18.1877 4.23307 18.1221 4.87122C18.1096 5.68959 17.6978 6.37255 17.2617 6.90247C17.6758 7.0096 18.0561 7.22939 18.3545 7.54504C18.7722 7.98703 18.9966 8.5778 18.9795 9.18567C18.9622 9.79235 18.7041 10.3668 18.2637 10.7843L18.2646 10.7853L14.4434 14.4386C13.727 15.2393 12.7251 15.625 11.667 15.6251H8.33301C7.96622 15.6252 7.7651 15.7439 7.66699 15.8741C7.64095 15.9088 7.61077 15.9423 7.57812 15.9708L6.74707 16.6964L7.1084 17.0577C7.35248 17.3018 7.35248 17.6975 7.1084 17.9415C6.86432 18.1856 6.46868 18.1856 6.22461 17.9415L2.05566 13.7726C2.05394 13.7708 2.05151 13.7695 2.0498 13.7677C2.04836 13.7662 2.04732 13.7643 2.0459 13.7628L1.22461 12.9415C0.980914 12.6974 0.980674 12.3017 1.22461 12.0577C1.46856 11.8138 1.86429 11.814 2.1084 12.0577L2.50781 12.4572L6.70703 8.40735C7.11015 7.90917 7.72169 7.70825 8.33301 7.70813H10.0771L9.98145 7.61536C9.96948 7.60372 9.95728 7.5908 9.94629 7.57825C9.41895 6.97562 8.5421 6.11738 8.54199 4.83313C8.51915 4.21508 8.69135 3.60467 9.03516 3.08997C9.38456 2.5673 9.89289 2.16925 10.4844 1.95618C11.0759 1.74335 11.7209 1.72639 12.3232 1.90637C12.6812 2.01346 13.013 2.18838 13.3027 2.41711C13.5948 2.15502 13.9394 1.95199 14.3164 1.82532ZM16.7168 8.07825C16.4404 8.07059 16.1717 8.17255 15.9707 8.36243L15.9668 8.36633L14.3506 9.86633L13.7754 10.4425C13.7231 10.4947 13.6628 10.5341 13.5996 10.5636L12.4668 11.6163C12.4501 11.6318 12.43 11.6431 12.4121 11.6564C11.9865 12.0621 11.4224 12.2921 10.833 12.2921H9.16699C8.82216 12.2919 8.54227 12.0119 8.54199 11.6671C8.54199 11.3221 8.82199 11.0423 9.16699 11.0421H10.833C11.1091 11.0421 11.374 10.9316 11.5693 10.7365C11.7646 10.5412 11.8749 10.2763 11.875 10.0001C11.875 9.72391 11.7646 9.45913 11.5693 9.26379C11.374 9.06861 11.1091 8.95814 10.833 8.95813H8.33301C7.96593 8.95825 7.76503 9.07777 7.66699 9.20813C7.64702 9.23471 7.62353 9.26025 7.59961 9.28333L3.3916 13.3409L5.86133 15.8107L6.71484 15.0646C7.11801 14.5733 7.72555 14.3752 8.33301 14.3751H11.667C12.4288 14.375 13.0808 14.1012 13.5293 13.589L13.5674 13.548L17.4014 9.88196L17.4043 9.87903C17.6051 9.68912 17.7225 9.42675 17.7305 9.15051C17.7382 8.87399 17.6353 8.60451 17.4453 8.40344C17.2554 8.20283 16.993 8.0861 16.7168 8.07825ZM15.7988 3.02258C15.4492 2.89683 15.0661 2.89163 14.7139 3.00989C14.362 3.12821 14.0602 3.36293 13.8574 3.67395C13.7462 3.84454 13.558 3.95116 13.3545 3.95813C13.1508 3.96481 12.9554 3.87104 12.833 3.70813C12.6159 3.41925 12.3111 3.20722 11.9648 3.10364C11.6188 3.00034 11.2481 3.0098 10.9082 3.13196C10.5681 3.25449 10.2751 3.48376 10.0742 3.7843C9.8734 4.08497 9.77405 4.44266 9.79102 4.80383C9.79146 4.81345 9.79101 4.8235 9.79102 4.83313C9.79111 5.54285 10.2406 6.01743 10.8721 6.7384L13.3203 9.11633L13.4619 8.98547L15.8076 6.64172C16.4089 6.04039 16.8749 5.45972 16.875 4.83313C16.875 4.80973 16.8763 4.78607 16.8789 4.76282C16.9211 4.39356 16.8376 4.01999 16.6416 3.70422C16.4456 3.3887 16.1483 3.14852 15.7988 3.02258Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="badge-container MuiBox-root css-3aw23n"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            Staking
          </p>
        </div>
        <div
          class="badge-container MuiBox-root css-3aw23n"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            Earn
          </p>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1cefz00-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          fill="none"
          height="28"
          viewBox="0 0 28 28"
          width="28"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.535 1.766a1.167 1.167 0 0 1 1.338 1.458l-.007.021-2.24 7.024a.624.624 0 0 1-.009.026.584.584 0 0 0 .548.788h8.168a1.751 1.751 0 0 1 1.742 1.956 1.75 1.75 0 0 1-.413.935l-11.55 11.9h-.001a1.165 1.165 0 0 1-1.984-1.097l.007-.023 2.24-7.024a.584.584 0 0 0-.268-.748.584.584 0 0 0-.27-.065h-8.17a1.751 1.751 0 0 1-1.362-2.853l.034-.039 11.55-11.9c.171-.187.398-.313.647-.359Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="MuiStack-root css-4e6rn7-MuiStack-root"
    >
      <div
        class="MuiBox-root css-h1oaii"
      >
        <div
          class="MuiBox-root css-wioyy2"
        >
          <div
            class="MuiStack-root css-k0vgmj-MuiStack-root"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular css-1we4ia9-MuiAvatar-root"
            >
              <img
                alt="morpho"
                class="MuiAvatar-img css-i4dfdj-MuiAvatar-img"
                src="https://strapi.jumper.exchange/uploads/morpho_eef0686ee3_2e4b8e06a6.png"
              />
            </div>
          </div>
          <div
            class="MuiBox-root css-k8f1u5"
          >
            <div
              class="MuiStack-root css-1x5pyaa-MuiStack-root"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-5ylplk-MuiAvatar-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-lqgmaj-MuiSkeleton-root"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-16zy09x"
        >
          <span
            class="MuiTypography-root MuiTypography-titleXSmall css-1ifzs6j-MuiTypography-root"
          >
            metamorpho
          </span>
          <p
            class="MuiTypography-root MuiTypography-bodyXSmall css-jqy5sg-MuiTypography-root"
          >
            base
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1gk85zv-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13xb3fr-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-5ul7dk"
          >
            <p
              class="MuiTypography-root MuiTypography-bodyXSmall css-ooebcp-MuiTypography-root"
            >
              labels.apy
            </p>
            <svg
              aria-hidden="true"
              aria-label="tooltips.apy"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1bfwnwm-MuiSvgIcon-root"
              data-mui-internal-clone-element="true"
              data-testid="InfoIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
              />
            </svg>
          </div>
          <div
            class="MuiBox-root css-nqls9x"
          >
            <p
              class="MuiTypography-root MuiTypography-bodyLargeStrong css-h1a9re-MuiTypography-root"
            >
              7.15%
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13xb3fr-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-5ul7dk"
          >
            <p
              class="MuiTypography-root MuiTypography-bodyXSmall css-ooebcp-MuiTypography-root"
            >
              labels.lockupPeriod
            </p>
            <svg
              aria-hidden="true"
              aria-label="tooltips.lockupPeriod"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1bfwnwm-MuiSvgIcon-root"
              data-mui-internal-clone-element="true"
              data-testid="InfoIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
              />
            </svg>
          </div>
          <div
            class="MuiBox-root css-nqls9x"
          >
            <p
              class="MuiTypography-root MuiTypography-bodyLargeStrong css-h1a9re-MuiTypography-root"
            >
              2 months
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1gk85zv-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13xb3fr-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-5ul7dk"
          >
            <p
              class="MuiTypography-root MuiTypography-bodyXSmall css-ooebcp-MuiTypography-root"
            >
              labels.tvl
            </p>
            <svg
              aria-hidden="true"
              aria-label="tooltips.tvl"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1bfwnwm-MuiSvgIcon-root"
              data-mui-internal-clone-element="true"
              data-testid="InfoIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
              />
            </svg>
          </div>
          <div
            class="MuiBox-root css-nqls9x"
          >
            <p
              class="MuiTypography-root MuiTypography-bodyLargeStrong css-h1a9re-MuiTypography-root"
            >
              $62,572,415
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13xb3fr-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-5ul7dk"
          >
            <p
              class="MuiTypography-root MuiTypography-bodyXSmall css-ooebcp-MuiTypography-root"
            >
              labels.assets
            </p>
            <svg
              aria-hidden="true"
              aria-label="tooltips.assets"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1bfwnwm-MuiSvgIcon-root"
              data-mui-internal-clone-element="true"
              data-testid="InfoIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
              />
            </svg>
          </div>
          <div
            class="MuiBox-root css-nqls9x"
          >
            <div
              class="MuiBox-root css-1xdhyk6"
            >
              <div
                class="MuiStack-root css-k0vgmj-MuiStack-root"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-ed36ue-MuiAvatar-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-mop73e-MuiSkeleton-root"
                  />
                </div>
              </div>
            </div>
            <p
              class="MuiTypography-root MuiTypography-bodyLargeStrong css-h1a9re-MuiTypography-root"
            >
              USD Coin
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EarnCard snapshot > compact card with loading matches snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-1hf7rvl"
  >
    <div
      class="MuiStack-root css-10yhf5k-MuiStack-root"
    >
      <div
        class="MuiStack-root css-101nimo-MuiStack-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-k4wtzs-MuiSkeleton-root"
          style="width: 96px;"
        />
      </div>
      <span
        class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-1ewrmch-MuiSkeleton-root"
        style="width: 48px; height: 48px;"
      />
    </div>
    <div
      class="MuiStack-root css-4e6rn7-MuiStack-root"
    >
      <div
        class="MuiBox-root css-cmx6on"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-mop73e-MuiSkeleton-root"
        />
        <div
          class="MuiBox-root css-fxacz8"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-12wa9j5-MuiSkeleton-root"
          />
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-12wa9j5-MuiSkeleton-root"
          />
        </div>
      </div>
      <span
        class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-1131gtb-MuiSkeleton-root"
      />
      <span
        class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-1131gtb-MuiSkeleton-root"
      />
    </div>
  </div>
</div>
`;

exports[`EarnCard snapshot > compact card with no recommendation matches snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-1hf7rvl"
  >
    <div
      class="MuiStack-root css-10yhf5k-MuiStack-root"
    >
      <div
        class="MuiStack-root css-101nimo-MuiStack-root"
      >
        <div
          class="badge-container MuiBox-root css-3aw23n"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            Staking
          </p>
        </div>
        <div
          class="badge-container MuiBox-root css-3aw23n"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            Earn
          </p>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1cefz00-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          fill="none"
          height="28"
          viewBox="0 0 28 28"
          width="28"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.535 1.766a1.167 1.167 0 0 1 1.338 1.458l-.007.021-2.24 7.024a.624.624 0 0 1-.009.026.584.584 0 0 0 .548.788h8.168a1.751 1.751 0 0 1 1.742 1.956 1.75 1.75 0 0 1-.413.935l-11.55 11.9h-.001a1.165 1.165 0 0 1-1.984-1.097l.007-.023 2.24-7.024a.584.584 0 0 0-.268-.748.584.584 0 0 0-.27-.065h-8.17a1.751 1.751 0 0 1-1.362-2.853l.034-.039 11.55-11.9c.171-.187.398-.313.647-.359Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="MuiStack-root css-4e6rn7-MuiStack-root"
    >
      <div
        class="MuiBox-root css-h1oaii"
      >
        <div
          class="MuiBox-root css-wioyy2"
        >
          <div
            class="MuiStack-root css-k0vgmj-MuiStack-root"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular css-1we4ia9-MuiAvatar-root"
            >
              <img
                alt="morpho"
                class="MuiAvatar-img css-i4dfdj-MuiAvatar-img"
                src="https://strapi.jumper.exchange/uploads/morpho_eef0686ee3_2e4b8e06a6.png"
              />
            </div>
          </div>
          <div
            class="MuiBox-root css-k8f1u5"
          >
            <div
              class="MuiStack-root css-1x5pyaa-MuiStack-root"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-5ylplk-MuiAvatar-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-lqgmaj-MuiSkeleton-root"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-16zy09x"
        >
          <span
            class="MuiTypography-root MuiTypography-titleXSmall css-1ifzs6j-MuiTypography-root"
          >
            metamorpho
          </span>
          <p
            class="MuiTypography-root MuiTypography-bodyXSmall css-jqy5sg-MuiTypography-root"
          >
            base
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1gk85zv-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13xb3fr-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-5ul7dk"
          >
            <p
              class="MuiTypography-root MuiTypography-bodyXSmall css-ooebcp-MuiTypography-root"
            >
              labels.apy
            </p>
            <svg
              aria-hidden="true"
              aria-label="tooltips.apy"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1bfwnwm-MuiSvgIcon-root"
              data-mui-internal-clone-element="true"
              data-testid="InfoIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
              />
            </svg>
          </div>
          <div
            class="MuiBox-root css-nqls9x"
          >
            <p
              class="MuiTypography-root MuiTypography-bodyLargeStrong css-h1a9re-MuiTypography-root"
            >
              7.15%
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13xb3fr-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-5ul7dk"
          >
            <p
              class="MuiTypography-root MuiTypography-bodyXSmall css-ooebcp-MuiTypography-root"
            >
              labels.lockupPeriod
            </p>
            <svg
              aria-hidden="true"
              aria-label="tooltips.lockupPeriod"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1bfwnwm-MuiSvgIcon-root"
              data-mui-internal-clone-element="true"
              data-testid="InfoIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
              />
            </svg>
          </div>
          <div
            class="MuiBox-root css-nqls9x"
          >
            <p
              class="MuiTypography-root MuiTypography-bodyLargeStrong css-h1a9re-MuiTypography-root"
            >
              2 months
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1gk85zv-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13xb3fr-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-5ul7dk"
          >
            <p
              class="MuiTypography-root MuiTypography-bodyXSmall css-ooebcp-MuiTypography-root"
            >
              labels.tvl
            </p>
            <svg
              aria-hidden="true"
              aria-label="tooltips.tvl"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1bfwnwm-MuiSvgIcon-root"
              data-mui-internal-clone-element="true"
              data-testid="InfoIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
              />
            </svg>
          </div>
          <div
            class="MuiBox-root css-nqls9x"
          >
            <p
              class="MuiTypography-root MuiTypography-bodyLargeStrong css-h1a9re-MuiTypography-root"
            >
              $62,572,415
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13xb3fr-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-5ul7dk"
          >
            <p
              class="MuiTypography-root MuiTypography-bodyXSmall css-ooebcp-MuiTypography-root"
            >
              labels.assets
            </p>
            <svg
              aria-hidden="true"
              aria-label="tooltips.assets"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1bfwnwm-MuiSvgIcon-root"
              data-mui-internal-clone-element="true"
              data-testid="InfoIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
              />
            </svg>
          </div>
          <div
            class="MuiBox-root css-nqls9x"
          >
            <div
              class="MuiBox-root css-1xdhyk6"
            >
              <div
                class="MuiStack-root css-k0vgmj-MuiStack-root"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-ed36ue-MuiAvatar-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-mop73e-MuiSkeleton-root"
                  />
                </div>
              </div>
            </div>
            <p
              class="MuiTypography-root MuiTypography-bodyLargeStrong css-h1a9re-MuiTypography-root"
            >
              USD Coin
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EarnCard snapshot > compact card with single asset matches snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-1hf7rvl"
  >
    <div
      class="MuiStack-root css-10yhf5k-MuiStack-root"
    >
      <div
        class="MuiStack-root css-101nimo-MuiStack-root"
      >
        <div
          class="badge-container MuiBox-root css-3aw23n"
        >
          <svg
            fill="none"
            height="12"
            viewBox="0 0 20 20"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.3164 1.82532C14.9356 1.61746 15.6081 1.62565 16.2227 1.8468C16.8368 2.06813 17.3586 2.49049 17.7031 3.04504C18.0418 3.5906 18.1877 4.23307 18.1221 4.87122C18.1096 5.68959 17.6978 6.37255 17.2617 6.90247C17.6758 7.0096 18.0561 7.22939 18.3545 7.54504C18.7722 7.98703 18.9966 8.5778 18.9795 9.18567C18.9622 9.79235 18.7041 10.3668 18.2637 10.7843L18.2646 10.7853L14.4434 14.4386C13.727 15.2393 12.7251 15.625 11.667 15.6251H8.33301C7.96622 15.6252 7.7651 15.7439 7.66699 15.8741C7.64095 15.9088 7.61077 15.9423 7.57812 15.9708L6.74707 16.6964L7.1084 17.0577C7.35248 17.3018 7.35248 17.6975 7.1084 17.9415C6.86432 18.1856 6.46868 18.1856 6.22461 17.9415L2.05566 13.7726C2.05394 13.7708 2.05151 13.7695 2.0498 13.7677C2.04836 13.7662 2.04732 13.7643 2.0459 13.7628L1.22461 12.9415C0.980914 12.6974 0.980674 12.3017 1.22461 12.0577C1.46856 11.8138 1.86429 11.814 2.1084 12.0577L2.50781 12.4572L6.70703 8.40735C7.11015 7.90917 7.72169 7.70825 8.33301 7.70813H10.0771L9.98145 7.61536C9.96948 7.60372 9.95728 7.5908 9.94629 7.57825C9.41895 6.97562 8.5421 6.11738 8.54199 4.83313C8.51915 4.21508 8.69135 3.60467 9.03516 3.08997C9.38456 2.5673 9.89289 2.16925 10.4844 1.95618C11.0759 1.74335 11.7209 1.72639 12.3232 1.90637C12.6812 2.01346 13.013 2.18838 13.3027 2.41711C13.5948 2.15502 13.9394 1.95199 14.3164 1.82532ZM16.7168 8.07825C16.4404 8.07059 16.1717 8.17255 15.9707 8.36243L15.9668 8.36633L14.3506 9.86633L13.7754 10.4425C13.7231 10.4947 13.6628 10.5341 13.5996 10.5636L12.4668 11.6163C12.4501 11.6318 12.43 11.6431 12.4121 11.6564C11.9865 12.0621 11.4224 12.2921 10.833 12.2921H9.16699C8.82216 12.2919 8.54227 12.0119 8.54199 11.6671C8.54199 11.3221 8.82199 11.0423 9.16699 11.0421H10.833C11.1091 11.0421 11.374 10.9316 11.5693 10.7365C11.7646 10.5412 11.8749 10.2763 11.875 10.0001C11.875 9.72391 11.7646 9.45913 11.5693 9.26379C11.374 9.06861 11.1091 8.95814 10.833 8.95813H8.33301C7.96593 8.95825 7.76503 9.07777 7.66699 9.20813C7.64702 9.23471 7.62353 9.26025 7.59961 9.28333L3.3916 13.3409L5.86133 15.8107L6.71484 15.0646C7.11801 14.5733 7.72555 14.3752 8.33301 14.3751H11.667C12.4288 14.375 13.0808 14.1012 13.5293 13.589L13.5674 13.548L17.4014 9.88196L17.4043 9.87903C17.6051 9.68912 17.7225 9.42675 17.7305 9.15051C17.7382 8.87399 17.6353 8.60451 17.4453 8.40344C17.2554 8.20283 16.993 8.0861 16.7168 8.07825ZM15.7988 3.02258C15.4492 2.89683 15.0661 2.89163 14.7139 3.00989C14.362 3.12821 14.0602 3.36293 13.8574 3.67395C13.7462 3.84454 13.558 3.95116 13.3545 3.95813C13.1508 3.96481 12.9554 3.87104 12.833 3.70813C12.6159 3.41925 12.3111 3.20722 11.9648 3.10364C11.6188 3.00034 11.2481 3.0098 10.9082 3.13196C10.5681 3.25449 10.2751 3.48376 10.0742 3.7843C9.8734 4.08497 9.77405 4.44266 9.79102 4.80383C9.79146 4.81345 9.79101 4.8235 9.79102 4.83313C9.79111 5.54285 10.2406 6.01743 10.8721 6.7384L13.3203 9.11633L13.4619 8.98547L15.8076 6.64172C16.4089 6.04039 16.8749 5.45972 16.875 4.83313C16.875 4.80973 16.8763 4.78607 16.8789 4.76282C16.9211 4.39356 16.8376 4.01999 16.6416 3.70422C16.4456 3.3887 16.1483 3.14852 15.7988 3.02258Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="badge-container MuiBox-root css-3aw23n"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            Staking
          </p>
        </div>
        <div
          class="badge-container MuiBox-root css-3aw23n"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            Earn
          </p>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1cefz00-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          fill="none"
          height="28"
          viewBox="0 0 28 28"
          width="28"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.535 1.766a1.167 1.167 0 0 1 1.338 1.458l-.007.021-2.24 7.024a.624.624 0 0 1-.009.026.584.584 0 0 0 .548.788h8.168a1.751 1.751 0 0 1 1.742 1.956 1.75 1.75 0 0 1-.413.935l-11.55 11.9h-.001a1.165 1.165 0 0 1-1.984-1.097l.007-.023 2.24-7.024a.584.584 0 0 0-.268-.748.584.584 0 0 0-.27-.065h-8.17a1.751 1.751 0 0 1-1.362-2.853l.034-.039 11.55-11.9c.171-.187.398-.313.647-.359Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="MuiStack-root css-4e6rn7-MuiStack-root"
    >
      <div
        class="MuiBox-root css-h1oaii"
      >
        <div
          class="MuiBox-root css-wioyy2"
        >
          <div
            class="MuiStack-root css-k0vgmj-MuiStack-root"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular css-1we4ia9-MuiAvatar-root"
            >
              <img
                alt="morpho"
                class="MuiAvatar-img css-i4dfdj-MuiAvatar-img"
                src="https://strapi.jumper.exchange/uploads/morpho_eef0686ee3_2e4b8e06a6.png"
              />
            </div>
          </div>
          <div
            class="MuiBox-root css-k8f1u5"
          >
            <div
              class="MuiStack-root css-1x5pyaa-MuiStack-root"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-5ylplk-MuiAvatar-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-lqgmaj-MuiSkeleton-root"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-16zy09x"
        >
          <span
            class="MuiTypography-root MuiTypography-titleXSmall css-1ifzs6j-MuiTypography-root"
          >
            metamorpho
          </span>
          <p
            class="MuiTypography-root MuiTypography-bodyXSmall css-jqy5sg-MuiTypography-root"
          >
            base
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1gk85zv-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13xb3fr-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-5ul7dk"
          >
            <p
              class="MuiTypography-root MuiTypography-bodyXSmall css-ooebcp-MuiTypography-root"
            >
              labels.apy
            </p>
            <svg
              aria-hidden="true"
              aria-label="tooltips.apy"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1bfwnwm-MuiSvgIcon-root"
              data-mui-internal-clone-element="true"
              data-testid="InfoIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
              />
            </svg>
          </div>
          <div
            class="MuiBox-root css-nqls9x"
          >
            <p
              class="MuiTypography-root MuiTypography-bodyLargeStrong css-h1a9re-MuiTypography-root"
            >
              7.15%
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13xb3fr-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-5ul7dk"
          >
            <p
              class="MuiTypography-root MuiTypography-bodyXSmall css-ooebcp-MuiTypography-root"
            >
              labels.lockupPeriod
            </p>
            <svg
              aria-hidden="true"
              aria-label="tooltips.lockupPeriod"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1bfwnwm-MuiSvgIcon-root"
              data-mui-internal-clone-element="true"
              data-testid="InfoIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
              />
            </svg>
          </div>
          <div
            class="MuiBox-root css-nqls9x"
          >
            <p
              class="MuiTypography-root MuiTypography-bodyLargeStrong css-h1a9re-MuiTypography-root"
            >
              2 months
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1gk85zv-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13xb3fr-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-5ul7dk"
          >
            <p
              class="MuiTypography-root MuiTypography-bodyXSmall css-ooebcp-MuiTypography-root"
            >
              labels.tvl
            </p>
            <svg
              aria-hidden="true"
              aria-label="tooltips.tvl"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1bfwnwm-MuiSvgIcon-root"
              data-mui-internal-clone-element="true"
              data-testid="InfoIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
              />
            </svg>
          </div>
          <div
            class="MuiBox-root css-nqls9x"
          >
            <p
              class="MuiTypography-root MuiTypography-bodyLargeStrong css-h1a9re-MuiTypography-root"
            >
              $62,572,415
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13xb3fr-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-5ul7dk"
          >
            <p
              class="MuiTypography-root MuiTypography-bodyXSmall css-ooebcp-MuiTypography-root"
            >
              labels.assets
            </p>
            <svg
              aria-hidden="true"
              aria-label="tooltips.assets"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1bfwnwm-MuiSvgIcon-root"
              data-mui-internal-clone-element="true"
              data-testid="InfoIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
              />
            </svg>
          </div>
          <div
            class="MuiBox-root css-nqls9x"
          >
            <div
              class="MuiBox-root css-1xdhyk6"
            >
              <div
                class="MuiStack-root css-k0vgmj-MuiStack-root"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-ed36ue-MuiAvatar-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-mop73e-MuiSkeleton-root"
                  />
                </div>
              </div>
            </div>
            <p
              class="MuiTypography-root MuiTypography-bodyLargeStrong css-h1a9re-MuiTypography-root"
            >
              USD Coin
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EarnCard snapshot > list item card matches snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-l50vyp"
  >
    <div
      class="MuiStack-root css-qvm35a-MuiStack-root"
    >
      <div
        class="MuiBox-root css-h1oaii"
      >
        <div
          class="MuiBox-root css-wioyy2"
        >
          <div
            class="MuiStack-root css-k0vgmj-MuiStack-root"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular css-1vh1zud-MuiAvatar-root"
            >
              <img
                alt="morpho"
                class="MuiAvatar-img css-i4dfdj-MuiAvatar-img"
                src="https://strapi.jumper.exchange/uploads/morpho_eef0686ee3_2e4b8e06a6.png"
              />
            </div>
          </div>
          <div
            class="MuiBox-root css-k8f1u5"
          >
            <div
              class="MuiStack-root css-1x5pyaa-MuiStack-root"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1ksgy38-MuiAvatar-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-ddjmgs-MuiSkeleton-root"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-16zy09x"
        >
          <span
            class="MuiTypography-root MuiTypography-titleXSmall css-1ifzs6j-MuiTypography-root"
          >
            metamorpho
          </span>
          <p
            class="MuiTypography-root MuiTypography-bodyXSmall css-jqy5sg-MuiTypography-root"
          >
            base
          </p>
        </div>
      </div>
      <div
        class="MuiStack-root css-1x8l63s-MuiStack-root"
      >
        <div
          class="badge-container MuiBox-root css-1w9a10q"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 20 20"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.3164 1.82532C14.9356 1.61746 15.6081 1.62565 16.2227 1.8468C16.8368 2.06813 17.3586 2.49049 17.7031 3.04504C18.0418 3.5906 18.1877 4.23307 18.1221 4.87122C18.1096 5.68959 17.6978 6.37255 17.2617 6.90247C17.6758 7.0096 18.0561 7.22939 18.3545 7.54504C18.7722 7.98703 18.9966 8.5778 18.9795 9.18567C18.9622 9.79235 18.7041 10.3668 18.2637 10.7843L18.2646 10.7853L14.4434 14.4386C13.727 15.2393 12.7251 15.625 11.667 15.6251H8.33301C7.96622 15.6252 7.7651 15.7439 7.66699 15.8741C7.64095 15.9088 7.61077 15.9423 7.57812 15.9708L6.74707 16.6964L7.1084 17.0577C7.35248 17.3018 7.35248 17.6975 7.1084 17.9415C6.86432 18.1856 6.46868 18.1856 6.22461 17.9415L2.05566 13.7726C2.05394 13.7708 2.05151 13.7695 2.0498 13.7677C2.04836 13.7662 2.04732 13.7643 2.0459 13.7628L1.22461 12.9415C0.980914 12.6974 0.980674 12.3017 1.22461 12.0577C1.46856 11.8138 1.86429 11.814 2.1084 12.0577L2.50781 12.4572L6.70703 8.40735C7.11015 7.90917 7.72169 7.70825 8.33301 7.70813H10.0771L9.98145 7.61536C9.96948 7.60372 9.95728 7.5908 9.94629 7.57825C9.41895 6.97562 8.5421 6.11738 8.54199 4.83313C8.51915 4.21508 8.69135 3.60467 9.03516 3.08997C9.38456 2.5673 9.89289 2.16925 10.4844 1.95618C11.0759 1.74335 11.7209 1.72639 12.3232 1.90637C12.6812 2.01346 13.013 2.18838 13.3027 2.41711C13.5948 2.15502 13.9394 1.95199 14.3164 1.82532ZM16.7168 8.07825C16.4404 8.07059 16.1717 8.17255 15.9707 8.36243L15.9668 8.36633L14.3506 9.86633L13.7754 10.4425C13.7231 10.4947 13.6628 10.5341 13.5996 10.5636L12.4668 11.6163C12.4501 11.6318 12.43 11.6431 12.4121 11.6564C11.9865 12.0621 11.4224 12.2921 10.833 12.2921H9.16699C8.82216 12.2919 8.54227 12.0119 8.54199 11.6671C8.54199 11.3221 8.82199 11.0423 9.16699 11.0421H10.833C11.1091 11.0421 11.374 10.9316 11.5693 10.7365C11.7646 10.5412 11.8749 10.2763 11.875 10.0001C11.875 9.72391 11.7646 9.45913 11.5693 9.26379C11.374 9.06861 11.1091 8.95814 10.833 8.95813H8.33301C7.96593 8.95825 7.76503 9.07777 7.66699 9.20813C7.64702 9.23471 7.62353 9.26025 7.59961 9.28333L3.3916 13.3409L5.86133 15.8107L6.71484 15.0646C7.11801 14.5733 7.72555 14.3752 8.33301 14.3751H11.667C12.4288 14.375 13.0808 14.1012 13.5293 13.589L13.5674 13.548L17.4014 9.88196L17.4043 9.87903C17.6051 9.68912 17.7225 9.42675 17.7305 9.15051C17.7382 8.87399 17.6353 8.60451 17.4453 8.40344C17.2554 8.20283 16.993 8.0861 16.7168 8.07825ZM15.7988 3.02258C15.4492 2.89683 15.0661 2.89163 14.7139 3.00989C14.362 3.12821 14.0602 3.36293 13.8574 3.67395C13.7462 3.84454 13.558 3.95116 13.3545 3.95813C13.1508 3.96481 12.9554 3.87104 12.833 3.70813C12.6159 3.41925 12.3111 3.20722 11.9648 3.10364C11.6188 3.00034 11.2481 3.0098 10.9082 3.13196C10.5681 3.25449 10.2751 3.48376 10.0742 3.7843C9.8734 4.08497 9.77405 4.44266 9.79102 4.80383C9.79146 4.81345 9.79101 4.8235 9.79102 4.83313C9.79111 5.54285 10.2406 6.01743 10.8721 6.7384L13.3203 9.11633L13.4619 8.98547L15.8076 6.64172C16.4089 6.04039 16.8749 5.45972 16.875 4.83313C16.875 4.80973 16.8763 4.78607 16.8789 4.76282C16.9211 4.39356 16.8376 4.01999 16.6416 3.70422C16.4456 3.3887 16.1483 3.14852 15.7988 3.02258Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="badge-container MuiBox-root css-1w9a10q"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            Staking
          </p>
        </div>
        <div
          class="badge-container MuiBox-root css-1w9a10q"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            Earn
          </p>
        </div>
        <div
          aria-label="tooltips.apy"
          class="MuiBox-root css-1ci75fx"
          data-mui-internal-clone-element="true"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            7.15% labels.apy
          </p>
        </div>
        <div
          aria-label="tooltips.lockupPeriod"
          class="MuiBox-root css-1ci75fx"
          data-mui-internal-clone-element="true"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            2 months
          </p>
        </div>
        <div
          aria-label="tooltips.tvl"
          class="MuiBox-root css-1ci75fx"
          data-mui-internal-clone-element="true"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            $62,572,415 labels.tvl
          </p>
        </div>
        <div
          aria-label="tooltips.assets"
          class="MuiBox-root css-1ci75fx"
          data-mui-internal-clone-element="true"
        >
          <div
            class="MuiStack-root css-k0vgmj-MuiStack-root"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-ed36ue-MuiAvatar-root"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-mop73e-MuiSkeleton-root"
              />
            </div>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            USD Coin
          </p>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-tf9979-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 28 28"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.535 1.766a1.167 1.167 0 0 1 1.338 1.458l-.007.021-2.24 7.024a.624.624 0 0 1-.009.026.584.584 0 0 0 .548.788h8.168a1.751 1.751 0 0 1 1.742 1.956 1.75 1.75 0 0 1-.413.935l-11.55 11.9h-.001a1.165 1.165 0 0 1-1.984-1.097l.007-.023 2.24-7.024a.584.584 0 0 0-.268-.748.584.584 0 0 0-.27-.065h-8.17a1.751 1.751 0 0 1-1.362-2.853l.034-.039 11.55-11.9c.171-.187.398-.313.647-.359Z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EarnCard snapshot > list item card with loading matches snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-l50vyp"
  >
    <div
      class="MuiStack-root css-qvm35a-MuiStack-root"
    >
      <div
        class="MuiBox-root css-cmx6on"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-2rnxpj-MuiSkeleton-root"
        />
        <div
          class="MuiBox-root css-fxacz8"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-12wa9j5-MuiSkeleton-root"
          />
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-12wa9j5-MuiSkeleton-root"
          />
        </div>
      </div>
      <div
        class="MuiStack-root css-1x8l63s-MuiStack-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-1ussm11-MuiSkeleton-root"
        />
        <span
          class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-1ussm11-MuiSkeleton-root"
        />
        <span
          class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-1ussm11-MuiSkeleton-root"
        />
        <span
          class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-1ussm11-MuiSkeleton-root"
        />
        <span
          class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-1ussm11-MuiSkeleton-root"
        />
        <span
          class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-1ewrmch-MuiSkeleton-root"
          style="width: 40px; height: 40px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EarnCard snapshot > list item card with no recommendation matches snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-l50vyp"
  >
    <div
      class="MuiStack-root css-qvm35a-MuiStack-root"
    >
      <div
        class="MuiBox-root css-h1oaii"
      >
        <div
          class="MuiBox-root css-wioyy2"
        >
          <div
            class="MuiStack-root css-k0vgmj-MuiStack-root"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular css-1vh1zud-MuiAvatar-root"
            >
              <img
                alt="morpho"
                class="MuiAvatar-img css-i4dfdj-MuiAvatar-img"
                src="https://strapi.jumper.exchange/uploads/morpho_eef0686ee3_2e4b8e06a6.png"
              />
            </div>
          </div>
          <div
            class="MuiBox-root css-k8f1u5"
          >
            <div
              class="MuiStack-root css-1x5pyaa-MuiStack-root"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1ksgy38-MuiAvatar-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-ddjmgs-MuiSkeleton-root"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-16zy09x"
        >
          <span
            class="MuiTypography-root MuiTypography-titleXSmall css-1ifzs6j-MuiTypography-root"
          >
            metamorpho
          </span>
          <p
            class="MuiTypography-root MuiTypography-bodyXSmall css-jqy5sg-MuiTypography-root"
          >
            base
          </p>
        </div>
      </div>
      <div
        class="MuiStack-root css-1x8l63s-MuiStack-root"
      >
        <div
          class="badge-container MuiBox-root css-1w9a10q"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            Staking
          </p>
        </div>
        <div
          class="badge-container MuiBox-root css-1w9a10q"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            Earn
          </p>
        </div>
        <div
          aria-label="tooltips.apy"
          class="MuiBox-root css-1ci75fx"
          data-mui-internal-clone-element="true"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            7.15% labels.apy
          </p>
        </div>
        <div
          aria-label="tooltips.lockupPeriod"
          class="MuiBox-root css-1ci75fx"
          data-mui-internal-clone-element="true"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            2 months
          </p>
        </div>
        <div
          aria-label="tooltips.tvl"
          class="MuiBox-root css-1ci75fx"
          data-mui-internal-clone-element="true"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            $62,572,415 labels.tvl
          </p>
        </div>
        <div
          aria-label="tooltips.assets"
          class="MuiBox-root css-1ci75fx"
          data-mui-internal-clone-element="true"
        >
          <div
            class="MuiStack-root css-k0vgmj-MuiStack-root"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-ed36ue-MuiAvatar-root"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-mop73e-MuiSkeleton-root"
              />
            </div>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            USD Coin
          </p>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-tf9979-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 28 28"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.535 1.766a1.167 1.167 0 0 1 1.338 1.458l-.007.021-2.24 7.024a.624.624 0 0 1-.009.026.584.584 0 0 0 .548.788h8.168a1.751 1.751 0 0 1 1.742 1.956 1.75 1.75 0 0 1-.413.935l-11.55 11.9h-.001a1.165 1.165 0 0 1-1.984-1.097l.007-.023 2.24-7.024a.584.584 0 0 0-.268-.748.584.584 0 0 0-.27-.065h-8.17a1.751 1.751 0 0 1-1.362-2.853l.034-.039 11.55-11.9c.171-.187.398-.313.647-.359Z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EarnCard snapshot > list item card with single asset matches snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-l50vyp"
  >
    <div
      class="MuiStack-root css-qvm35a-MuiStack-root"
    >
      <div
        class="MuiBox-root css-h1oaii"
      >
        <div
          class="MuiBox-root css-wioyy2"
        >
          <div
            class="MuiStack-root css-k0vgmj-MuiStack-root"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular css-1vh1zud-MuiAvatar-root"
            >
              <img
                alt="morpho"
                class="MuiAvatar-img css-i4dfdj-MuiAvatar-img"
                src="https://strapi.jumper.exchange/uploads/morpho_eef0686ee3_2e4b8e06a6.png"
              />
            </div>
          </div>
          <div
            class="MuiBox-root css-k8f1u5"
          >
            <div
              class="MuiStack-root css-1x5pyaa-MuiStack-root"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1ksgy38-MuiAvatar-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-ddjmgs-MuiSkeleton-root"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-16zy09x"
        >
          <span
            class="MuiTypography-root MuiTypography-titleXSmall css-1ifzs6j-MuiTypography-root"
          >
            metamorpho
          </span>
          <p
            class="MuiTypography-root MuiTypography-bodyXSmall css-jqy5sg-MuiTypography-root"
          >
            base
          </p>
        </div>
      </div>
      <div
        class="MuiStack-root css-1x8l63s-MuiStack-root"
      >
        <div
          class="badge-container MuiBox-root css-1w9a10q"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 20 20"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.3164 1.82532C14.9356 1.61746 15.6081 1.62565 16.2227 1.8468C16.8368 2.06813 17.3586 2.49049 17.7031 3.04504C18.0418 3.5906 18.1877 4.23307 18.1221 4.87122C18.1096 5.68959 17.6978 6.37255 17.2617 6.90247C17.6758 7.0096 18.0561 7.22939 18.3545 7.54504C18.7722 7.98703 18.9966 8.5778 18.9795 9.18567C18.9622 9.79235 18.7041 10.3668 18.2637 10.7843L18.2646 10.7853L14.4434 14.4386C13.727 15.2393 12.7251 15.625 11.667 15.6251H8.33301C7.96622 15.6252 7.7651 15.7439 7.66699 15.8741C7.64095 15.9088 7.61077 15.9423 7.57812 15.9708L6.74707 16.6964L7.1084 17.0577C7.35248 17.3018 7.35248 17.6975 7.1084 17.9415C6.86432 18.1856 6.46868 18.1856 6.22461 17.9415L2.05566 13.7726C2.05394 13.7708 2.05151 13.7695 2.0498 13.7677C2.04836 13.7662 2.04732 13.7643 2.0459 13.7628L1.22461 12.9415C0.980914 12.6974 0.980674 12.3017 1.22461 12.0577C1.46856 11.8138 1.86429 11.814 2.1084 12.0577L2.50781 12.4572L6.70703 8.40735C7.11015 7.90917 7.72169 7.70825 8.33301 7.70813H10.0771L9.98145 7.61536C9.96948 7.60372 9.95728 7.5908 9.94629 7.57825C9.41895 6.97562 8.5421 6.11738 8.54199 4.83313C8.51915 4.21508 8.69135 3.60467 9.03516 3.08997C9.38456 2.5673 9.89289 2.16925 10.4844 1.95618C11.0759 1.74335 11.7209 1.72639 12.3232 1.90637C12.6812 2.01346 13.013 2.18838 13.3027 2.41711C13.5948 2.15502 13.9394 1.95199 14.3164 1.82532ZM16.7168 8.07825C16.4404 8.07059 16.1717 8.17255 15.9707 8.36243L15.9668 8.36633L14.3506 9.86633L13.7754 10.4425C13.7231 10.4947 13.6628 10.5341 13.5996 10.5636L12.4668 11.6163C12.4501 11.6318 12.43 11.6431 12.4121 11.6564C11.9865 12.0621 11.4224 12.2921 10.833 12.2921H9.16699C8.82216 12.2919 8.54227 12.0119 8.54199 11.6671C8.54199 11.3221 8.82199 11.0423 9.16699 11.0421H10.833C11.1091 11.0421 11.374 10.9316 11.5693 10.7365C11.7646 10.5412 11.8749 10.2763 11.875 10.0001C11.875 9.72391 11.7646 9.45913 11.5693 9.26379C11.374 9.06861 11.1091 8.95814 10.833 8.95813H8.33301C7.96593 8.95825 7.76503 9.07777 7.66699 9.20813C7.64702 9.23471 7.62353 9.26025 7.59961 9.28333L3.3916 13.3409L5.86133 15.8107L6.71484 15.0646C7.11801 14.5733 7.72555 14.3752 8.33301 14.3751H11.667C12.4288 14.375 13.0808 14.1012 13.5293 13.589L13.5674 13.548L17.4014 9.88196L17.4043 9.87903C17.6051 9.68912 17.7225 9.42675 17.7305 9.15051C17.7382 8.87399 17.6353 8.60451 17.4453 8.40344C17.2554 8.20283 16.993 8.0861 16.7168 8.07825ZM15.7988 3.02258C15.4492 2.89683 15.0661 2.89163 14.7139 3.00989C14.362 3.12821 14.0602 3.36293 13.8574 3.67395C13.7462 3.84454 13.558 3.95116 13.3545 3.95813C13.1508 3.96481 12.9554 3.87104 12.833 3.70813C12.6159 3.41925 12.3111 3.20722 11.9648 3.10364C11.6188 3.00034 11.2481 3.0098 10.9082 3.13196C10.5681 3.25449 10.2751 3.48376 10.0742 3.7843C9.8734 4.08497 9.77405 4.44266 9.79102 4.80383C9.79146 4.81345 9.79101 4.8235 9.79102 4.83313C9.79111 5.54285 10.2406 6.01743 10.8721 6.7384L13.3203 9.11633L13.4619 8.98547L15.8076 6.64172C16.4089 6.04039 16.8749 5.45972 16.875 4.83313C16.875 4.80973 16.8763 4.78607 16.8789 4.76282C16.9211 4.39356 16.8376 4.01999 16.6416 3.70422C16.4456 3.3887 16.1483 3.14852 15.7988 3.02258Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="badge-container MuiBox-root css-1w9a10q"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            Staking
          </p>
        </div>
        <div
          class="badge-container MuiBox-root css-1w9a10q"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            Earn
          </p>
        </div>
        <div
          aria-label="tooltips.apy"
          class="MuiBox-root css-1ci75fx"
          data-mui-internal-clone-element="true"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            7.15% labels.apy
          </p>
        </div>
        <div
          aria-label="tooltips.lockupPeriod"
          class="MuiBox-root css-1ci75fx"
          data-mui-internal-clone-element="true"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            2 months
          </p>
        </div>
        <div
          aria-label="tooltips.tvl"
          class="MuiBox-root css-1ci75fx"
          data-mui-internal-clone-element="true"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            $62,572,415 labels.tvl
          </p>
        </div>
        <div
          aria-label="tooltips.assets"
          class="MuiBox-root css-1ci75fx"
          data-mui-internal-clone-element="true"
        >
          <div
            class="MuiStack-root css-k0vgmj-MuiStack-root"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-ed36ue-MuiAvatar-root"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-mop73e-MuiSkeleton-root"
              />
            </div>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            USD Coin
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
